@@ -155,6 +155,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #1731706: Call Tcl_ConditionFinalize for Tcl_Conditions that will
+  not be used again (this requires Tcl/Tk 8.3.1), also fix a memory leak in
+  Tkapp_Call when calling from a thread different than the one that created
+  the Tcl interpreter. Patch by Robert Hancock.
+
 - Issue #4285: Change sys.version_info to be a named tuple. Patch by
   Ross Light.
 
